<resources>
    <string name="app_name">GOGO</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bar">menu_bar</string>
    <string name="menu_userinfo">userinfo</string>
    <string name="menu_showuserinfo">showuserinfo</string>
    <string name="menu_checkpw">checkpw</string>
    <string name="menu_calendar">calendar</string>
    <string name="menu_foodreginfo">foodreginfo</string>
    <string name="menu_category">category</string>
    <string name="menu_board">board</string>
    <string name="menu_faq">faq</string>


</resources>
